Name:            frame-ctrl
Version:         0.1.0
Cabal-Version:   >= 1.6
Build-Type:      Simple
License:         OtherLicense
License-file:    LICENSE
Copyright:       2012 Joonas Javanainen <joonas.javanainen@gmail.com>
Author:          Joonas Javanainen <joonas.javanainen@gmail.com>
Maintainer:      Joonas Javanainen <joonas.javanainen@gmail.com>
Synopsis:        A small application for controlling Samsung photo frames

Executable frame-ctrl
  Main-is:       FrameCtrl.hs
  Build-Depends: base       >= 4    && < 4.6
               , bytestring >= 0.9  && < 0.10
               , usb        >  1.0  && < 1.2
               , binary     >= 0.5
  ghc-options:   -Wall
